--- a/uknown_en4eip.lib.json
+++ b/uknown_en4eip.lib.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_en4eip.lib",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_en4eip.lib",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565864981372,
-	"last_scraped": 1567749197425,
+	"last_scraped": 1568693343467,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1567790048158,
+	"next_scrape": 1568738180308,
 	"category": "clicker",
-	"last_update": 1567749197425,
+	"last_update": 1568693343467,
 	"output": [
 		{
 			"args": {},
-			"calls": 46265,
+			"calls": 55389,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"iles ",
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 49819,
+			"calls": 57487,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"iles ",
@@ -80,7 +80,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 4195,
+			"calls": 5280,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"iles ",
@@ -107,8 +107,8 @@
 			]
 		}
 	],
-	"updt": 1567732093687,
-	"edit": 5,
+	"updt": 1567749471327,
+	"edit": 6,
 	"identified": [
 		{
 			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
