--- a/uknown_vdw6b9.gallery.json
+++ b/uknown_vdw6b9.gallery.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_vdw6b9.gallery",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_vdw6b9.gallery",
 	"sector": "NGC_4554",
 	"sec_level": 4,
 	"date_added": 1562817977792,
-	"last_scraped": 1567745135073,
+	"last_scraped": 1568693224414,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562817977792
 		}
 	],
-	"next_scrape": 1567786808794,
+	"next_scrape": 1568733403530,
 	"category": "clicker",
-	"last_update": 1567745135073,
+	"last_update": 1568693224414,
 	"output": [
 		{
 			"args": {},
-			"calls": 235268,
+			"calls": 246841,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ritin",
@@ -59,7 +59,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 262897,
+			"calls": 269103,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ritin",
@@ -99,7 +99,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 35345,
+			"calls": 36460,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ritin",
@@ -152,6 +152,6 @@
 			]
 		}
 	],
-	"updt": 1567728035903,
-	"edit": 25
+	"updt": 1567745182102,
+	"edit": 26
 }
