--- a/uknown_rxzrvg.magnara.json
+++ b/uknown_rxzrvg.magnara.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_rxzrvg.magnara",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_rxzrvg.magnara",
 	"sector": "K_7008",
 	"sec_level": 4,
 	"date_added": 1565504050472,
-	"last_scraped": 1567738796971,
+	"last_scraped": 1568693002057,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1567785142360,
+	"next_scrape": 1568739534096,
 	"category": "clicker",
-	"last_update": 1567738796971,
+	"last_update": 1568693002057,
 	"output": [
 		{
 			"args": {},
-			"calls": 48508,
+			"calls": 58503,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"e, us",
@@ -52,7 +52,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 44355,
+			"calls": 48340,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"e, us",
@@ -84,7 +84,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 4820,
+			"calls": 5945,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"e, us",
@@ -113,8 +113,8 @@
 			]
 		}
 	],
-	"updt": 1567696900623,
-	"edit": 7,
+	"updt": 1567738867129,
+	"edit": 8,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
