--- a/unknown_hxejyx.editor_notes.json
+++ b/unknown_hxejyx.editor_notes.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_hxejyx.editor_notes",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_hxejyx.editor_notes",
 	"sector": "SPC_2734",
 	"sec_level": 4,
 	"date_added": 1561129767964,
-	"last_scraped": 1567733189723,
+	"last_scraped": 1568692911745,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561129767964
 		}
 	],
-	"next_scrape": 1567776830134,
+	"next_scrape": 1568739343868,
 	"category": "clicker",
-	"last_update": 1567733189723,
+	"last_update": 1568692911745,
 	"output": [
 		{
 			"args": {},
-			"calls": 619534,
+			"calls": 627326,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"as go",
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 666068,
+			"calls": 670090,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"as go",
@@ -81,7 +81,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 91737,
+			"calls": 92782,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"as go",
@@ -109,8 +109,8 @@
 			]
 		}
 	],
-	"updt": 1567681789097,
-	"edit": 80,
+	"updt": 1567733223470,
+	"edit": 81,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
