--- a/unknown_yv2hdz.text.json
+++ b/unknown_yv2hdz.text.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_yv2hdz.text",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_yv2hdz.text",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566086357394,
-	"last_scraped": 1567732806890,
+	"last_scraped": 1568692821306,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1567778500181,
+	"next_scrape": 1568738751889,
 	"category": "clicker",
-	"last_update": 1567732806890,
+	"last_update": 1568692821306,
 	"output": [
 		{
 			"args": {},
-			"calls": 41592,
+			"calls": 48208,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				" Seco",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 27701,
+			"calls": 32231,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				" Seco",
@@ -76,7 +76,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 6303,
+			"calls": 7433,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				" Seco",
@@ -101,8 +101,8 @@
 			]
 		}
 	],
-	"updt": 1567732771400,
-	"edit": 6,
+	"updt": 1567732998515,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
