--- a/uknown_3de6l0.void.json
+++ b/uknown_3de6l0.void.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_3de6l0.void",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "uknown_3de6l0.void",
 	"sector": "VNP_3676",
 	"sec_level": 3,
 	"date_added": 1559619466066,
-	"last_scraped": 1567776617524,
+	"last_scraped": 1568694187275,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,15 +25,15 @@
 			}
 		]
 	],
-	"updt": 1567760750906,
-	"edit": 7,
-	"next_scrape": 1567868334666,
+	"updt": 1567776764230,
+	"edit": 8,
+	"next_scrape": 1568740413424,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1567776617524,
+	"last_update": 1568694187275,
 	"output": [
 		{
 			"args": {},
-			"calls": 555,
+			"calls": 710,
 			"base": "The message is: Hackmud for life",
 			"fragments": [
 				"is be",
