--- a/unknown_5rw4mm.casino.json
+++ b/unknown_5rw4mm.casino.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_5rw4mm.casino",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_5rw4mm.casino",
 	"sector": "VNP_1006",
 	"sec_level": 4,
 	"date_added": 1562546094913,
-	"last_scraped": 1567777220799,
+	"last_scraped": 1568694227909,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562546094913
 		}
 	],
-	"next_scrape": 1567822549356,
+	"next_scrape": 1568737380414,
 	"category": "clicker",
-	"last_update": 1567777220799,
+	"last_update": 1568694227909,
 	"output": [
 		{
 			"args": {},
-			"calls": 248103,
+			"calls": 256252,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"01 01",
@@ -47,7 +47,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 221476,
+			"calls": 227305,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"01 01",
@@ -1418,10 +1418,65 @@
 				"CK 0 0000 ",
 				"CK  0100 0"
 			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 905,
+			"base": "`LCL000000CURED`",
+			"fragments": [
+				" E",
+				"I0 ",
+				" 00E",
+				"IC00 00",
+				"I00 010",
+				"00 00SE",
+				"ICK00 00",
+				"IC00 010",
+				"I 0100 0",
+				"00 00 SE",
+				" 0100 0E",
+				"ICK00 010",
+				"ICK 0000 ",
+				"ICK 00 00",
+				"IC 0100 0",
+				"I0100 010",
+				"0100 010E",
+				"0100 0 SE",
+				"0000 K SE",
+				"00 010 SE",
+				"00 00K SE",
+				"0 000K SE",
+				" 0100 0SE",
+				"ICK S0000 ",
+				"ICK S00 00",
+				"ICK S0 000",
+				"ICK 0100 0",
+				"ICK 00 010",
+				"IC0100 010",
+				"IC0 0000 0",
+				"0100 010SE",
+				"0000 CK SE",
+				"00 010K SE",
+				"00 00CK SE",
+				"0 000CK SE",
+				"0 0000 0SE",
+				"0 0000  SE",
+				"ICK0100 010",
+				"ICK0 0000 0",
+				"ICK SE0000 ",
+				"ICK SE00 00",
+				"ICK SE0 000",
+				"ICK S00 010",
+				"ICK 000 000",
+				"ICK 0 0000 ",
+				"ICK  0100 0"
+			]
 		}
 	],
-	"updt": 1567777217641,
-	"edit": 31,
+	"updt": 1567777441710,
+	"edit": 32,
 	"identified": [
 		{
 			"document": "NOT FOUND",
