--- a/uknown_8e0k08.casino.json
+++ b/uknown_8e0k08.casino.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_8e0k08.casino",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_8e0k08.casino",
 	"sector": "SPC_3851",
 	"sec_level": 4,
 	"date_added": 1561972836592,
-	"last_scraped": 1567763265686,
+	"last_scraped": 1568693797742,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561972836592
 		}
 	],
-	"next_scrape": 1567808997589,
+	"next_scrape": 1568734430891,
 	"category": "clicker",
-	"last_update": 1567763265686,
+	"last_update": 1568693797742,
 	"output": [
 		{
 			"args": {},
-			"calls": 569229,
+			"calls": 574820,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				" mask",
@@ -51,7 +51,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 614622,
+			"calls": 624289,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				" mask",
@@ -83,7 +83,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 84823,
+			"calls": 85641,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				" mask",
@@ -112,8 +112,8 @@
 			]
 		}
 	],
-	"updt": 1567763235017,
-	"edit": 74,
+	"updt": 1567763685674,
+	"edit": 75,
 	"identified": [
 		{
 			"document": "MFT0X3F_CLST0X0A_SECT0X8F99_FILE0XBD88122E",
