--- a/unknown_j1o9bp.chat.json
+++ b/unknown_j1o9bp.chat.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_j1o9bp.chat",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_j1o9bp.chat",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565738922302,
-	"last_scraped": 1567763798797,
+	"last_scraped": 1568693896121,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 20,
-	"next_scrape": 1567807146695,
+	"next_scrape": 1568737913484,
 	"category": "fishie_tank",
-	"last_update": 1567763798797,
+	"last_update": 1568693896121,
 	"output": [
 		{
 			"args": {},
-			"calls": 47324,
+			"calls": 57923,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"_FILE",
@@ -56,7 +56,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 6111,
+			"calls": 6765,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -97,7 +97,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 44328,
+			"calls": 50675,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"_FILE",
@@ -130,8 +130,8 @@
 			]
 		}
 	],
-	"updt": 1567747438168,
-	"edit": 6,
+	"updt": 1567763911638,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
