--- a/unknown_nd836z.calm.json
+++ b/unknown_nd836z.calm.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_nd836z.calm",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_nd836z.calm",
 	"sector": "VNP_6280",
 	"sec_level": 4,
 	"date_added": 1565035197956,
-	"last_scraped": 1567762241243,
+	"last_scraped": 1568693695950,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1567805453330,
+	"next_scrape": 1568738191147,
 	"category": "fishie_tank",
-	"last_update": 1567762241243,
+	"last_update": 1568693695950,
 	"output": [
 		{
 			"args": {},
-			"calls": 49427,
+			"calls": 57274,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"stack",
@@ -46,7 +46,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 4822,
+			"calls": 5294,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -77,7 +77,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 37654,
+			"calls": 49211,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"stack",
@@ -100,8 +100,8 @@
 			]
 		}
 	],
-	"updt": 1567745857794,
-	"edit": 5,
+	"updt": 1567762335654,
+	"edit": 6,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
