--- a/uknown_bqu6gq.load_brain.json
+++ b/uknown_bqu6gq.load_brain.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_bqu6gq.load_brain",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_bqu6gq.load_brain",
 	"sector": "NGC_7982",
 	"sec_level": 4,
 	"date_added": 1563474647990,
-	"last_scraped": 1567782285339,
+	"last_scraped": 1568694751282,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1567827835630,
+	"next_scrape": 1568740914263,
 	"category": "clicker",
-	"last_update": 1567782285339,
+	"last_update": 1568694751282,
 	"output": [
 		{
 			"args": {},
-			"calls": 71239,
+			"calls": 75397,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"E ERR",
@@ -55,7 +55,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 61012,
+			"calls": 66105,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"E ERR",
@@ -93,7 +93,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 10020,
+			"calls": 11310,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"E ERR",
@@ -118,8 +118,8 @@
 			]
 		}
 	],
-	"updt": 1567766391654,
-	"edit": 10,
+	"updt": 1567782399671,
+	"edit": 11,
 	"identified": [
 		{
 			"document": "MFT0XF4_CLST0XCC_SECT0X7BE4_FILE0XE2A8BDD4",
