--- a/uknown_dtc8il.solver.json
+++ b/uknown_dtc8il.solver.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_dtc8il.solver",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_dtc8il.solver",
 	"sector": "VNP_9228",
 	"sec_level": 4,
 	"date_added": 1560297458254,
-	"last_scraped": 1567796375549,
+	"last_scraped": 1568695164679,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1560297458254
 		}
 	],
-	"updt": 1567780373507,
-	"edit": 116,
-	"next_scrape": 1567840807242,
+	"updt": 1567796389837,
+	"edit": 117,
+	"next_scrape": 1568738932846,
 	"category": "clicker",
-	"last_update": 1567796375549,
+	"last_update": 1568695164679,
 	"output": [
 		{
 			"args": {},
-			"calls": 952874,
+			"calls": 963190,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"B5 An",
@@ -65,7 +65,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 1012563,
+			"calls": 1017280,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"B5 An",
@@ -317,6 +317,11 @@
 				"s contra",
 				" is cont"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
