--- a/unknown_b23omn.t3_kill.json
+++ b/unknown_b23omn.t3_kill.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_b23omn.t3_kill",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_b23omn.t3_kill",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562113406592,
-	"last_scraped": 1567780577394,
+	"last_scraped": 1568694589849,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562113406592
 		}
 	],
-	"next_scrape": 1567824164446,
+	"next_scrape": 1568736043883,
 	"category": "clicker",
-	"last_update": 1567780577394,
+	"last_update": 1568694589849,
 	"output": [
 		{
 			"args": {},
-			"calls": 581628,
+			"calls": 593595,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"lue o",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 607461,
+			"calls": 615770,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"lue o",
@@ -89,7 +89,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 85253,
+			"calls": 86256,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"lue o",
@@ -136,6 +136,6 @@
 			]
 		}
 	],
-	"updt": 1567764812240,
-	"edit": 67
+	"updt": 1567780598528,
+	"edit": 68
 }
