--- a/unknown_b8wg6g.protector.json
+++ b/unknown_b8wg6g.protector.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_b8wg6g.protector",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_b8wg6g.protector",
 	"sector": "HJG_2788",
 	"sec_level": 4,
 	"date_added": 1563132582095,
-	"last_scraped": 1567791199724,
+	"last_scraped": 1568694872549,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563132582095
 		}
 	],
-	"next_scrape": 1567834504235,
+	"next_scrape": 1568740858340,
 	"category": "coin_flipper",
-	"last_update": 1567791199724,
+	"last_update": 1568694872549,
 	"output": [
 		{
 			"args": {},
-			"calls": 1811326,
+			"calls": 1815335,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"sus t",
@@ -70,6 +70,6 @@
 			]
 		}
 	],
-	"updt": 1567774283246,
-	"edit": 158
+	"updt": 1567791423858,
+	"edit": 159
 }
