--- a/unknown_bxz2zy.pin.json
+++ b/unknown_bxz2zy.pin.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_bxz2zy.pin",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_bxz2zy.pin",
 	"sector": "VNP_1006",
 	"sec_level": 4,
 	"date_added": 1562618952479,
-	"last_scraped": 1567780176755,
+	"last_scraped": 1568694418657,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562618952479
 		}
 	],
-	"updt": 1567764588136,
-	"edit": 27,
-	"next_scrape": 1567820167713,
+	"updt": 1567780373507,
+	"edit": 28,
+	"next_scrape": 1568739555963,
 	"category": "fishie_tank",
-	"last_update": 1567780176755,
+	"last_update": 1568694418657,
 	"output": [
 		{
 			"args": {},
-			"calls": 253466,
+			"calls": 264314,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"nd re",
@@ -53,7 +53,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 25683,
+			"calls": 26481,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -90,7 +90,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 266033,
+			"calls": 279522,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"nd re",
