--- a/unknown_mk1ntg.search.json
+++ b/unknown_mk1ntg.search.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_mk1ntg.search",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "unknown_mk1ntg.search",
 	"sector": "NGC_4554",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1567782425924,
+	"last_scraped": 1568694780969,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,12 +21,12 @@
 			}
 		]
 	],
-	"updt": 1567766391654,
-	"edit": 60,
+	"updt": 1568694769774,
+	"edit": 62,
 	"output": [
 		{
 			"args": {},
-			"calls": 2415,
+			"calls": 2663,
 			"base": "Usage: `Agoogl.search { for: <what you're searching for> }`",
 			"fragments": [
 				"ies (",
@@ -63,11 +63,11 @@
 			]
 		}
 	],
-	"next_scrape": 1567863969650,
+	"next_scrape": 1568740836285,
 	"pl_output": "Usage: `Agoogl.search { for: <what you're searching for> }`",
 	"scrape_ct": 20,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1567782425924,
+	"last_update": 1568694780969,
 	"old_output": "Usage: `Agoogl.search { for: <what you're searching for> }`",
 	"identified": [
 		{
