--- a/unknown_tr6phd.offers.json
+++ b/unknown_tr6phd.offers.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_tr6phd.offers",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_tr6phd.offers",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562071377214,
-	"last_scraped": 1567780396661,
+	"last_scraped": 1568694540812,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562071377214
 		}
 	],
-	"next_scrape": 1567820694792,
+	"next_scrape": 1568741047347,
 	"category": "clicker",
-	"last_update": 1567780396661,
+	"last_update": 1568694540812,
 	"output": [
 		{
 			"args": {},
-			"calls": 408786,
+			"calls": 418946,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"she w",
@@ -58,7 +58,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 428280,
+			"calls": 434230,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"she w",
@@ -97,7 +97,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 59626,
+			"calls": 60832,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"she w",
@@ -148,6 +148,6 @@
 			]
 		}
 	],
-	"updt": 1567780373507,
-	"edit": 50
+	"updt": 1567780598528,
+	"edit": 51
 }
