--- a/abndnd_nxivu9.lz.json
+++ b/abndnd_nxivu9.lz.json
@@ -1,12 +1,12 @@
 {
 	"_id": "abndnd_nxivu9.lz",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "abndnd_nxivu9.lz",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566192488933,
-	"last_scraped": 1567796003619,
+	"last_scraped": 1568695062311,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1567841859864,
+	"next_scrape": 1568739887175,
 	"category": "clicker",
-	"last_update": 1567796003619,
+	"last_update": 1568695062311,
 	"output": [
 		{
 			"args": {},
-			"calls": 52055,
+			"calls": 57019,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"r maki",
@@ -54,7 +54,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 77903,
+			"calls": 82202,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"r maki",
@@ -88,7 +88,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 7823,
+			"calls": 9229,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"r maki",
@@ -117,10 +117,43 @@
 					]
 				}
 			]
+		},
+		{
+			"args": {
+				"CLICK": true
+			},
+			"calls": 656,
+			"base": "`LCLIC  SECURED`",
+			"fragments": [
+				"me, CK",
+				" me, K",
+				"r makiK",
+				"aking K",
+				"Kr maki",
+				"Kaking ",
+				"KI've h",
+				"I've hK",
+				"Krin + S",
+				"Km - int",
+				"K r maki",
+				"K me, Er",
+				"K aking ",
+				"K S me, ",
+				"K I've h",
+				"Kank you ",
+				"K you for",
+				"K rin + S",
+				"K m - int",
+				"K intro |",
+				"K Sr maki",
+				"K Saking ",
+				"K SI've h",
+				"K  me, Er"
+			]
 		}
 	],
-	"updt": 1567779921780,
-	"edit": 8,
+	"updt": 1567796165638,
+	"edit": 9,
 	"identified": [
 		{
 			"document": "MFT0XCF_CLST0X84_SECT0X6B58_FILE0X7A81819D",
