--- a/unknown_2xy62r.brainfuck.json
+++ b/unknown_2xy62r.brainfuck.json
@@ -6,7 +6,7 @@
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565571670801,
-	"last_scraped": 1567782086098,
+	"last_scraped": 1568694632050,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 17,
-	"next_scrape": 1567824142320,
+	"next_scrape": 1568736118917,
 	"category": "clicker",
-	"last_update": 1567782086098,
+	"last_update": 1568694632050,
 	"output": [
 		{
 			"args": {},
-			"calls": 77418,
+			"calls": 85258,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"nal c",
@@ -70,7 +70,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 65036,
+			"calls": 77110,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"nal c",
@@ -167,8 +167,8 @@
 			]
 		}
 	],
-	"updt": 1567766391654,
-	"edit": 9,
+	"updt": 1567782175201,
+	"edit": 10,
 	"identified": [
 		{
 			"document": "Cycle/Don Quixote",
@@ -199,6 +199,11 @@
 			"frags": [
 				" leave"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
