--- a/unknown_a7fi68.meme.json
+++ b/unknown_a7fi68.meme.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_a7fi68.meme",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_a7fi68.meme",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566106114953,
-	"last_scraped": 1567797419914,
+	"last_scraped": 1568695214110,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 6,
-	"next_scrape": 1567839240868,
+	"next_scrape": 1568735851691,
 	"category": "clicker",
-	"last_update": 1567797419914,
+	"last_update": 1568695214110,
 	"output": [
 		{
 			"args": {},
-			"calls": 94146,
+			"calls": 97519,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"rking p",
@@ -107,6 +107,14 @@
 			]
 		}
 	],
-	"updt": 1567781724190,
-	"edit": 8
+	"updt": 1567797518035,
+	"edit": 9,
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
+		}
+	]
 }
