--- a/unknown_a7fi68.meme.json
+++ b/unknown_a7fi68.meme.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_a7fi68.meme",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_a7fi68.meme",
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566106114953,
-	"last_scraped": 1568695214110,
+	"last_scraped": 1568695254202,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 6,
-	"next_scrape": 1568735851691,
+	"next_scrape": 1568739414949,
 	"category": "clicker",
-	"last_update": 1568695214110,
+	"last_update": 1568695254202,
 	"output": [
 		{
 			"args": {},
-			"calls": 97519,
+			"calls": 103277,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"rking p",
@@ -46,7 +46,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 90302,
+			"calls": 103018,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"rking p",
@@ -107,12 +107,9 @@
 			]
 		}
 	],
-	"updt": 1567797518035,
-	"edit": 9,
+	"updt": 1568695219975,
+	"edit": 10,
 	"retry_args": [
-		{
-			"click": true
-		},
 		{
 			"CLICK": true
 		}
