--- a/uknown_9pb06p.data.json
+++ b/uknown_9pb06p.data.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_9pb06p.data",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "player",
 	"script": "uknown_9pb06p.data",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1567804664236,
+	"last_scraped": 1568695534274,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1567790519715,
-	"edit": 22,
+	"updt": 1567804739061,
+	"edit": 23,
 	"pl_output": "str.substr is not a function",
-	"next_scrape": 1567884333498
+	"next_scrape": 1568775768048
 }
