--- a/uknown_9zvqnm.riot.json
+++ b/uknown_9zvqnm.riot.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_9zvqnm.riot",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "uknown_9zvqnm.riot",
 	"sector": "NGC_7257",
 	"sec_level": 4,
 	"date_added": 1565391280951,
-	"last_scraped": 1567808069006,
+	"last_scraped": 1568695645505,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565391280951
 		}
 	],
-	"next_scrape": 1567900848448,
+	"next_scrape": 1568741957104,
 	"category": "dice_roller",
-	"last_update": 1567808069006,
+	"last_update": 1568695645505,
 	"output": [
 		{
 			"args": {},
-			"calls": 225082,
+			"calls": 231377,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"9 We ",
@@ -46,8 +46,8 @@
 			]
 		}
 	],
-	"updt": 1567793455519,
-	"edit": 13,
+	"updt": 1567808121133,
+	"edit": 14,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
