--- a/unknown_ef2cjq.predict.json
+++ b/unknown_ef2cjq.predict.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_ef2cjq.predict",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_ef2cjq.predict",
 	"sector": "K_9564",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1567834594364,
+	"last_scraped": 1568696354726,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1567822341505,
-	"edit": 205,
+	"updt": 1567834753388,
+	"edit": 206,
 	"output": [
 		{
 			"args": {},
-			"calls": 5663360,
+			"calls": 5892832,
 			"base": "WIP. Stay tuned for updates",
 			"fragments": [
 				"card ",
@@ -48,11 +48,11 @@
 			]
 		}
 	],
-	"next_scrape": 1567874347631,
+	"next_scrape": 1568742596342,
 	"pl_output": "WIP. Stay tuned for updates",
 	"cannot_identify": true,
 	"scrape_ct": 14,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1567834594364,
+	"last_update": 1568696354726,
 	"old_output": "WIP. Stay tuned for updates"
 }
