--- a/unknown_piriip.crack.json
+++ b/unknown_piriip.crack.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_piriip.crack",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "player",
 	"script": "unknown_piriip.crack",
 	"sector": "NGC_0026",
 	"sec_level": 1,
 	"date_added": 1558821408422,
-	"last_scraped": 1567833576851,
+	"last_scraped": 1568696313152,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1567845579477,
-	"edit": 15,
+	"updt": 1567845803642,
+	"edit": 16,
 	"pl_output": "Cannot read property 'call' of undefined",
-	"next_scrape": 1567924972241
+	"next_scrape": 1568782510195
 }
