--- a/unknown_puquph.game.json
+++ b/unknown_puquph.game.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_puquph.game",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_puquph.game",
 	"sector": "NGC_2512",
 	"sec_level": 4,
 	"date_added": 1559517678336,
-	"last_scraped": 1567834934064,
+	"last_scraped": 1568696372260,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,17 +21,17 @@
 			}
 		]
 	],
-	"updt": 1567822566203,
-	"edit": 319,
+	"updt": 1567834978919,
+	"edit": 320,
 	"pl_output": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
-	"next_scrape": 1567880520785,
+	"next_scrape": 1568736518818,
 	"scrape_ct": 17,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1567834934064,
+	"last_update": 1568696372260,
 	"output": [
 		{
 			"args": {},
-			"calls": 3245641,
+			"calls": 3506921,
 			"base": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
 			"fragments": [
 				"nd 'la",
