--- a/unidentified_ls9dee.wrapper.json
+++ b/unidentified_ls9dee.wrapper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unidentified_ls9dee.wrapper",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unidentified_ls9dee.wrapper",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566906741393,
-	"last_scraped": 1567823219843,
+	"last_scraped": 1568696223535,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1567865956526,
+	"next_scrape": 1568739257252,
 	"category": "clicker",
-	"last_update": 1567823219843,
+	"last_update": 1568696223535,
 	"output": [
 		{
 			"args": {},
-			"calls": 70064,
+			"calls": 78134,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"provi",
@@ -92,7 +92,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 75819,
+			"calls": 79950,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"provi",
@@ -164,7 +164,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 4312,
+			"calls": 5130,
 			"base": "`LCLICK  ECURED`",
 			"fragments": [
 				"proviS",
@@ -275,8 +275,8 @@
 			]
 		}
 	],
-	"updt": 1567810832668,
-	"edit": 10,
+	"updt": 1567823240773,
+	"edit": 11,
 	"identified": [
 		{
 			"document": "NOT FOUND",
