--- a/derelict_hynxc6.calendarscraper.json
+++ b/derelict_hynxc6.calendarscraper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_hynxc6.calendarscraper",
 	"type": "fragment",
-	"mode": "timeout",
+	"mode": "npc",
 	"script": "derelict_hynxc6.calendarscraper",
 	"sector": "K_7008",
 	"sec_level": 4,
 	"date_added": 1565503257030,
-	"last_scraped": 1567878723736,
+	"last_scraped": 1568697409537,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1567922524354,
+	"next_scrape": 1568737938554,
 	"category": "coin_flipper",
-	"last_update": 1567878723736,
+	"last_update": 1568697409537,
 	"output": [
 		{
 			"args": {},
-			"calls": 234570,
+			"calls": 240476,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"e isn",
@@ -61,6 +61,6 @@
 			]
 		}
 	],
-	"updt": 1567868822146,
-	"edit": 17
+	"updt": 1567878750904,
+	"edit": 18
 }
