--- a/uknown_18chv1.beecryption.json
+++ b/uknown_18chv1.beecryption.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_18chv1.beecryption",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_18chv1.beecryption",
 	"sector": "HJG_6782",
 	"sec_level": 4,
 	"date_added": 1565644306479,
-	"last_scraped": 1567898688613,
+	"last_scraped": 1568697528520,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 20,
-	"next_scrape": 1567938360137,
+	"next_scrape": 1568738483556,
 	"category": "plant_sim",
-	"last_update": 1567898688613,
+	"last_update": 1568697528520,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 17351,
+			"calls": 18051,
 			"base": "c:\"jp1q15\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ic? O",
@@ -83,8 +83,8 @@
 			]
 		}
 	],
-	"updt": 1567888222168,
-	"edit": 19,
+	"updt": 1567898821848,
+	"edit": 20,
 	"identified": [
 		{
 			"document": "MFT0X3F_CLST0XD0_SECT0X04CF_FILE0X7ED7C93F",
