--- a/uknown_69y5dg.cubit_hash128.json
+++ b/uknown_69y5dg.cubit_hash128.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_69y5dg.cubit_hash128",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_69y5dg.cubit_hash128",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564086338794,
-	"last_scraped": 1567915524001,
+	"last_scraped": 1568697648905,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564086338794
 		}
 	],
-	"next_scrape": 1567957333552,
+	"next_scrape": 1568742899535,
 	"category": "plant_sim",
-	"last_update": 1567915524001,
+	"last_update": 1568697648905,
 	"output": [
 		{
 			"args": {},
@@ -71,7 +71,7 @@
 		},
 		{
 			"args": {},
-			"calls": 108212,
+			"calls": 109265,
 			"base": "c:\"z138o2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"cific",
@@ -109,6 +109,6 @@
 			]
 		}
 	],
-	"updt": 1567915519593,
-	"edit": 147
+	"updt": 1567915743959,
+	"edit": 148
 }
