--- a/uknown_xw0s65.t1_fast.json
+++ b/uknown_xw0s65.t1_fast.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_xw0s65.t1_fast",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_xw0s65.t1_fast",
 	"sector": "HJG_7908",
 	"sec_level": 4,
 	"date_added": 1565555340989,
-	"last_scraped": 1567909205362,
+	"last_scraped": 1568697618385,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565555340989
 		}
 	],
-	"next_scrape": 1567949117251,
+	"next_scrape": 1568738831878,
 	"category": "coin_flipper",
-	"last_update": 1567909205362,
+	"last_update": 1568697618385,
 	"output": [
 		{
 			"args": {},
-			"calls": 769121,
+			"calls": 774140,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"iting",
@@ -54,6 +54,6 @@
 			]
 		}
 	],
-	"updt": 1567909201193,
-	"edit": 55
+	"updt": 1567909428652,
+	"edit": 56
 }
