--- a/unknown_bjl3my.extras.json
+++ b/unknown_bjl3my.extras.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_bjl3my.extras",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_bjl3my.extras",
 	"sector": "VNP_2284",
 	"sec_level": 4,
 	"date_added": 1563713987809,
-	"last_scraped": 1567904369287,
+	"last_scraped": 1568697587868,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563713987809
 		}
 	],
-	"next_scrape": 1567950802289,
+	"next_scrape": 1568743297475,
 	"category": "dice_roller",
-	"last_update": 1567904369287,
+	"last_update": 1568697587868,
 	"output": [
 		{
 			"args": {},
-			"calls": 747759,
+			"calls": 755319,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"FILE0",
@@ -78,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1567894986960,
-	"edit": 63
+	"updt": 1567904682805,
+	"edit": 64
 }
