--- a/unknown_nipj21.t2_experimental.json
+++ b/unknown_nipj21.t2_experimental.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_nipj21.t2_experimental",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_nipj21.t2_experimental",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561403525545,
-	"last_scraped": 1567885638202,
+	"last_scraped": 1568697488100,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561403525545
 		}
 	],
-	"updt": 1567875818889,
-	"edit": 287,
-	"next_scrape": 1567927936413,
+	"updt": 1568697481633,
+	"edit": 289,
+	"next_scrape": 1568737127231,
 	"category": "coin_flipper",
-	"last_update": 1567885638202,
+	"last_update": 1568697488100,
 	"output": [
 		{
 			"args": {},
-			"calls": 3143253,
+			"calls": 3150245,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"tions",
