--- a/unknown_ai25zc.roulette.json
+++ b/unknown_ai25zc.roulette.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_ai25zc.roulette",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_ai25zc.roulette",
 	"sector": "HJG_6175",
 	"sec_level": 4,
 	"date_added": 1560744178432,
-	"last_scraped": 1567873931024,
+	"last_scraped": 1568697398074,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1560744178432
 		}
 	],
-	"next_scrape": 1567915824207,
+	"next_scrape": 1568743689584,
 	"category": "coin_flipper",
-	"last_update": 1567873931024,
+	"last_update": 1568697398074,
 	"output": [
 		{
 			"args": {},
-			"calls": 2219659,
+			"calls": 2239829,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"I hop",
@@ -99,8 +99,8 @@
 			]
 		}
 	],
-	"updt": 1567863629199,
-	"edit": 203,
+	"updt": 1567874013136,
+	"edit": 204,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
