--- a/unknown_rjrzwu.fuckthisshitimout.json
+++ b/unknown_rjrzwu.fuckthisshitimout.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_rjrzwu.fuckthisshitimout",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_rjrzwu.fuckthisshitimout",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564141596158,
-	"last_scraped": 1567867561657,
+	"last_scraped": 1568697307775,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564141596158
 		}
 	],
-	"next_scrape": 1567909423807,
+	"next_scrape": 1568740853844,
 	"category": "plant_sim",
-	"last_update": 1567867561657,
+	"last_update": 1568697307775,
 	"output": [
 		{
 			"args": {},
@@ -197,6 +197,19 @@
 				"SUBJ Ad",
 				" BODY I "
 			]
+		},
+		{
+			"args": {},
+			"calls": 597,
+			"base": "c:\"kmgwj7\" d:\"<f l n s w>\"\n****\n\n\n\n               \n                Ã\n               ÃOÃo\n                ÃÃ\n               ",
+			"fragments": [
+				"vanced",
+				"dvance",
+				"iors | ",
+				"handari",
+				"SUBJ Ad",
+				" BODY I "
+			]
 		}
 	],
 	"identified": [
@@ -213,6 +226,6 @@
 			]
 		}
 	],
-	"updt": 1567857534872,
-	"edit": 131
+	"updt": 1567867921105,
+	"edit": 132
 }
