--- a/unknown_x4o7lb.deposit.json
+++ b/unknown_x4o7lb.deposit.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_x4o7lb.deposit",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_x4o7lb.deposit",
 	"sector": "NGC_1810",
 	"sec_level": 4,
 	"date_added": 1566601899177,
-	"last_scraped": 1567838779975,
+	"last_scraped": 1568696683941,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566601899177
 		}
 	],
-	"next_scrape": 1567878898399,
+	"next_scrape": 1568740967775,
 	"category": "dice_roller",
-	"last_update": 1567838779975,
+	"last_update": 1568696683941,
 	"output": [
 		{
 			"args": {},
-			"calls": 572012,
+			"calls": 583836,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"pe\":\"",
@@ -69,6 +69,6 @@
 			]
 		}
 	],
-	"updt": 1567826402726,
-	"edit": 40
+	"updt": 1567839038133,
+	"edit": 41
 }
