--- a/derelict_nnxezh.uick_start.json
+++ b/derelict_nnxezh.uick_start.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_nnxezh.uick_start",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "derelict_nnxezh.uick_start",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565629679587,
-	"last_scraped": 1567988332232,
+	"last_scraped": 1568698040649,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 2,
-	"next_scrape": 1568032171593,
+	"next_scrape": 1568741194174,
 	"category": "plant_sim",
-	"last_update": 1567988332232,
+	"last_update": 1568698040649,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 24741,
+			"calls": 25638,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"appen",
@@ -84,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1567979128082,
-	"edit": 28
+	"updt": 1567988395760,
+	"edit": 29
 }
