--- a/uknown_8pcvow.solve_keyes.json
+++ b/uknown_8pcvow.solve_keyes.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_8pcvow.solve_keyes",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_8pcvow.solve_keyes",
 	"sector": "SPC_2743",
 	"sec_level": 4,
 	"date_added": 1564311134726,
-	"last_scraped": 1567993424141,
+	"last_scraped": 1568698060865,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564311134726
 		}
 	],
-	"next_scrape": 1568035747603,
+	"next_scrape": 1568740322088,
 	"category": "coin_flipper",
-	"last_update": 1567993424141,
+	"last_update": 1568698060865,
 	"output": [
 		{
 			"args": {},
-			"calls": 783621,
+			"calls": 791397,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ss To",
@@ -368,6 +368,6 @@
 			]
 		}
 	],
-	"updt": 1567984561294,
-	"edit": 61
+	"updt": 1567993582789,
+	"edit": 62
 }
