--- a/uknown_ayqcsi.reason.json
+++ b/uknown_ayqcsi.reason.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ayqcsi.reason",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ayqcsi.reason",
 	"sector": "NGC_0709",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1567935402181,
+	"last_scraped": 1568697768836,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1567926347068,
-	"edit": 165,
+	"updt": 1567935594594,
+	"edit": 166,
 	"output": [
 		{
 			"args": {},
-			"calls": 29957448,
+			"calls": 30259881,
 			"base": "User not recognized, aborting...",
 			"fragments": [
 				"E ERR",
@@ -71,10 +71,10 @@
 			]
 		}
 	],
-	"next_scrape": 1567981883647,
+	"next_scrape": 1568744553372,
 	"pl_output": "User not recognized, aborting...",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1567935402181,
+	"last_update": 1568697768836,
 	"old_output": "User not recognized, aborting...",
 	"identified": [
 		{
