--- a/uknown_ayqcsi.snowscan.json
+++ b/uknown_ayqcsi.snowscan.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ayqcsi.snowscan",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_ayqcsi.snowscan",
 	"sector": "NGC_0709",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568037721067,
+	"last_scraped": 1568698301268,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1568029691456,
-	"edit": 182,
+	"updt": 1568037813176,
+	"edit": 183,
 	"output": [
 		{
 			"args": {},
-			"calls": 33461378,
+			"calls": 34030232,
 			"base": "`9User not recognized, aborting...`",
 			"fragments": [
 				"ser Er",
@@ -67,10 +67,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568080655210,
+	"next_scrape": 1568740855689,
 	"pl_output": "`9User not recognized, aborting...`",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568037721067,
+	"last_update": 1568698301268,
 	"old_output": "`9User not recognized, aborting...`",
 	"identified": [
 		{
