--- a/uknown_rubp2z.side.json
+++ b/uknown_rubp2z.side.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_rubp2z.side",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_rubp2z.side",
 	"sector": "K_0199",
 	"sec_level": 4,
 	"date_added": 1564014839075,
-	"last_scraped": 1568047112779,
+	"last_scraped": 1568698352307,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564014839075
 		}
 	],
-	"next_scrape": 1568086764813,
+	"next_scrape": 1568738464112,
 	"category": "plant_sim",
-	"last_update": 1568047112779,
+	"last_update": 1568698352307,
 	"output": [
 		{
 			"args": {},
@@ -83,7 +83,7 @@
 		},
 		{
 			"args": {},
-			"calls": 113008,
+			"calls": 114092,
 			"base": "c:\"xbk5u7\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" an A",
@@ -126,8 +126,8 @@
 			]
 		}
 	],
-	"updt": 1568036683778,
-	"edit": 166,
+	"updt": 1568047290419,
+	"edit": 167,
 	"identified": [
 		{
 			"document": "MFT0X68_CLST0XCA_SECT0X0F5F_FILE0X87AF16DE",
