--- a/uknown_z9w7ru.workshop.json
+++ b/uknown_z9w7ru.workshop.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_z9w7ru.workshop",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_z9w7ru.workshop",
 	"sector": "HJG_5959",
 	"sec_level": 4,
 	"date_added": 1561815721083,
-	"last_scraped": 1567952973306,
+	"last_scraped": 1568697861477,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561815721083
 		}
 	],
-	"updt": 1567952970316,
-	"edit": 311,
-	"next_scrape": 1567993215765,
+	"updt": 1567953195255,
+	"edit": 312,
+	"next_scrape": 1568738096403,
 	"category": "coin_flipper",
-	"last_update": 1567952973306,
+	"last_update": 1568697861477,
 	"output": [
 		{
 			"args": {},
-			"calls": 3413723,
+			"calls": 3422210,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ter t",
