--- a/unknown_vhzebu.blackjack.json
+++ b/unknown_vhzebu.blackjack.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_vhzebu.blackjack",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_vhzebu.blackjack",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566878416405,
-	"last_scraped": 1568024362108,
+	"last_scraped": 1568698250861,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566878416405
 		}
 	],
-	"next_scrape": 1568068385706,
+	"next_scrape": 1568739301307,
 	"category": "dice_roller",
-	"last_update": 1568024362108,
+	"last_update": 1568698250861,
 	"output": [
 		{
 			"args": {},
-			"calls": 480189,
+			"calls": 490875,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ory is",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1568016366324,
-	"edit": 32
+	"updt": 1568024500508,
+	"edit": 33
 }
