--- a/uknown_2q8bmy.decorruptor.json
+++ b/uknown_2q8bmy.decorruptor.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_2q8bmy.decorruptor",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_2q8bmy.decorruptor",
 	"sector": "SPC_6536",
 	"sec_level": 4,
 	"date_added": 1561837134116,
-	"last_scraped": 1567967190441,
+	"last_scraped": 1568697909513,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,17 +21,17 @@
 			}
 		]
 	],
-	"updt": 1567967173434,
-	"edit": 212,
+	"updt": 1567967397013,
+	"edit": 213,
 	"pl_output": "rheaghe.decorruptor{target:#s.cyberdine.public,args:\"arg1:value1,arg2:value2,arg3:value3,etc:etcetera\"}\n\nArguments are optional. All values will be converted to strings\n\nmacro:\rheaghe.decorruptor {{ target:#s.{0}, args:{1} }}",
-	"next_scrape": 1568010053628,
+	"next_scrape": 1568741719738,
 	"scrape_ct": 14,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1567967190441,
+	"last_update": 1568697909513,
 	"output": [
 		{
 			"args": {},
-			"calls": 338940,
+			"calls": 350261,
 			"base": "rheaghe.decorruptor{target:#s.cyberdine.public,args:\"arg1:value1,arg2:value2,arg3:value3,etc:etcetera\"}\n\nArguments are optional. All values will be converted to strings\n\nmacro:\rheaghe.decorruptor {{ target:#s.{0}, args:{1} }}",
 			"fragments": [
 				"in fr",
