--- a/uknown_xf2dal.pub_info_o8aw40.json
+++ b/uknown_xf2dal.pub_info_o8aw40.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_xf2dal.pub_info_o8aw40",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "uknown_xf2dal.pub_info_o8aw40",
 	"sector": "SPC_8841",
 	"sec_level": 4,
 	"date_added": 1565482044943,
-	"last_scraped": 1568014908356,
+	"last_scraped": 1568698221212,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565482044943
 		}
 	],
-	"next_scrape": 1568055596291,
+	"next_scrape": 1568740370063,
 	"category": "plant_sim",
-	"last_update": 1568014908356,
+	"last_update": 1568698221212,
 	"output": [
 		{
 			"args": {},
@@ -47,7 +47,7 @@
 		},
 		{
 			"args": {},
-			"calls": 28599,
+			"calls": 29248,
 			"base": "c:\"4ktela\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"when c",
@@ -94,6 +94,6 @@
 			]
 		}
 	],
-	"updt": 1568006886199,
-	"edit": 57
+	"updt": 1568015235260,
+	"edit": 58
 }
