--- a/unknown_0qz0kr.flood.json
+++ b/unknown_0qz0kr.flood.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_0qz0kr.flood",
 	"type": "fragment",
-	"mode": "skip",
+	"mode": "npc",
 	"script": "unknown_0qz0kr.flood",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562051982595,
-	"last_scraped": 1567977145863,
+	"last_scraped": 1568698002076,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562051982595
 		}
 	],
-	"updt": 1567968300035,
-	"edit": 268,
-	"next_scrape": 1568021781224,
+	"updt": 1567977323726,
+	"edit": 269,
+	"next_scrape": 1568739712967,
 	"category": "dice_roller",
-	"last_update": 1567977145863,
+	"last_update": 1568698002076,
 	"output": [
 		{
 			"args": {},
-			"calls": 2891481,
+			"calls": 2899989,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"NSURI",
